--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,22 +12,6 @@ jobs:
   release:
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:5.7
-        env:
-          MYSQL_ROOT_PASSWORD: rootpassword
-          MYSQL_DATABASE: testdb
-          MYSQL_USER: testuser
-          MYSQL_PASSWORD: testpass
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -42,18 +26,11 @@ jobs:
         with:
           run_install: false
 
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+      - name: Setup just
+        uses: extractions/setup-just@v3
 
-      - name: Setup test database
-        run: |
-          # Wait for MySQL to be ready
-          until mysql -h 127.0.0.1 -u testuser -ptestpass -e "SELECT 1"; do
-            echo "Waiting for MySQL..."
-            sleep 2
-          done
-          # Initialize test data
-          mysql -h 127.0.0.1 -u testuser -ptestpass testdb < docker/init.sql
+      - name: Install dependencies
+        run: just install
 
       - name: Setup sqls
         run: |
@@ -64,16 +41,19 @@ jobs:
           sudo mv sqls /usr/local/bin/sqls
           sqls --version
 
-      - name: Run tests
-        run: xvfb-run -a pnpm run test
-        env:
-          DISPLAY: ':99.0'
+      - name: Run linting and type checking
+        run: just lint
+
+      # Note: Tests are currently disabled in the project
+      # When tests are re-enabled, we can add them back here
+      # - name: Run tests
+      #   run: just test
 
       - name: Build extension
-        run: pnpm run package
+        run: just build
 
       - name: Package VSIX
-        run: pnpm run vsix
+        run: just package-vsix
 
       - name: Get version
         id: version
